--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   sqflite_common_ffi: ^2.3.4+4
   image_picker: ^1.1.2
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
