--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,8 @@ android {
     namespace = "com.example.sampana"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    compileSdk = 35
+
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
