--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^1.1.2
   dropdown_search: ^5.0.6
 
+flutter_icons:
+  android: true
+  image_path: "assets/lehilahy.png" 
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,6 +56,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
