--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sqflite_common_ffi: ^2.3.4+4
   image_picker: ^1.1.2
   dropdown_search: ^5.0.6
+  image_cropper: ^5.0.1
 
 flutter_icons:
   android: true
